--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,3 +7,96 @@
   min-height: 100vh;
 }
  */
+.homePage{
+  width: 100%;
+  margin: 0;
+  padding: 0%;
+  height: 100vh;
+  overflow: scroll;
+}
+.homePage .container{
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  height: calc(100vh - 80px);
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
+.homePage .container .row{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.homePage .container .row .colOne{
+  max-width: 50%;
+}
+.homePage .colOne .buttons{
+  display: flex;
+  align-items: center;
+}
+.homePage .colOne .btn{
+  height: 50px;
+  color: var(--primary-color);
+  background-color: #fff;
+  padding: 0 5px;
+  width: 210px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  font-family: var(--font-family);
+  border-radius: 30px;
+  font-size: 16px;
+  font-weight: 400;
+  border: 1px solid #7B88AB99;
+  margin-right: 16px;
+  cursor: pointer;
+}
+.homePage .colOne .btn .icon{
+  background-color: var(--primary-color);
+  color: #fff;
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  padding: 12px;
+  margin-left: 8px;
+}
+.homePage .colOne .btnTwo{
+  height: 50px;
+  color: var(--background);
+  background-color: var(--primary-color);
+  padding: 0 5px;
+  width: 210px;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  font-family: var(--font-family);
+  border-radius: 30px;
+  font-size: 16px;
+  font-weight: 400;
+  cursor: pointer;
+}
+.homePage .colOne .btnTwo .icon{
+  background-color: var(--background);
+  color: var(--primary-color);
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  padding: 12px;
+  margin-left: 28px;
+}
+.homePage .container h1{
+  text-transform: uppercase;
+  color: var(--primary-color);
+  line-height: 68px;
+}
+.homePage .container h5{
+  margin: 30px 0px;
+  font-weight: 400;
+  max-width: 450px;
+}
+.homePage .container .row .colTwo{
+  width: 70%;
+  margin-left: -20%;
+  z-index: -100;
+}
