--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,7 +82,9 @@ input{
   width: calc(100% - 20px);
   /* outline: none; */
 }
-
+input::placeholder {
+  color: #bfbfbf;
+}
 select{
   height: 40px;
   padding: 8px;
@@ -112,6 +114,7 @@ button{
   border-radius: 50px;
   font-size: 16px;
   font-weight: 400;
+  cursor: pointer;
   border: 0;
 }
 .btnTwo{
@@ -124,6 +127,7 @@ button{
   border-radius: 8px;
   font-size: 16px;
   font-weight: 400;
+  cursor: pointer;
   border: 0;
 }
 .btn{
@@ -136,6 +140,7 @@ button{
   border-radius: 8px;
   font-size: 16px;
   font-weight: 400;
+  cursor: pointer;
   border: 0;
 }
 
