--- a/src/styles/components/sidebar.module.css
+++ b/src/styles/components/sidebar.module.css
@@ -20,3 +20,29 @@
 .desktopSidebar .container .sideLinks{
     width: 100%;
 }
+.desktopSidebar .container .link{
+    display: flex;
+    width: 100%;
+    height: 48px;
+    align-items: center ;
+    padding-left: 20px;
+    color: #93959D;
+    cursor: pointer;
+}
+.desktopSidebar .container .link .icon{
+    margin-right: 6px;
+}
+.desktopSidebar .container .activeLink{
+    display: flex;
+    width: 100%;
+    height: 48px;
+    align-items: center ;
+    padding-left: 20px;
+    background-color: var(--primary-color);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 8px;
+}
+.desktopSidebar .container .activeLink .icon{
+    margin-right: 6px;
+}
