--- a/src/styles/components/maindashboardpage.module.css
+++ b/src/styles/components/maindashboardpage.module.css
@@ -2,13 +2,17 @@
     display: flex;
     width: 100%;
     height: 100vh;
-
+    
 }
 .mainDashboardPage .mainSection{
     width: calc(100% - 300px);
-    max-width: 1040px;
+    /* max-width: 1040px; */
     padding: 30px;
     margin: auto;
+    overflow-y: scroll;
+}
+.mainDashboardPage .mainSection .body{
+    min-height: 75vh;
 }
 .metrics{
     display: flex;
@@ -17,7 +21,8 @@
     margin-bottom: 30px;
 }
 .metrics .card{
-    width: 180px;
+    min-width: 180px;
+    max-width: 250px;
     height: 170px;
     background-color: var(--background);
     padding: 24px 20px;
