--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -176,19 +176,30 @@ tbody tr:hover{
   cursor: pointer;
   background-color: #17173f20;
 }
+tbody{
+  border: 1px solid #ddd;
+
+}
+thead{
+  background-color: #F0F7FD;
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+  border: 1px solid #C7D0E799;
+}
 th{
   border-bottom: 1px solid #ddd;
-  text-transform: uppercase;
-  font-weight: 400;
-  color: var(--text-inactive);
-  padding: 12px 0 ;
-  padding-right: 32px;
+  font-weight: 600;
+  color: #333;
+  padding: 6px 0 ;
+  padding-right: 20px;
+  padding-left: 16px;
 }
 td{
   border-bottom: 1px solid #ddd;
   font-weight: 400;
   padding: 12px 0 ;
-  padding-right: 12px;
+  padding-right: 20px;
+  padding-left: 16px;
 }
 #table{
   overflow-x: scroll;
