--- a/src/styles/components/maindashboardpage.module.css
+++ b/src/styles/components/maindashboardpage.module.css
@@ -2,13 +2,14 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    
+    overflow-y: scroll;
 }
 .mainDashboardPage .mainSection{
     width: calc(100% - 300px);
     /* max-width: 1040px; */
     padding: 30px;
     margin: auto;
+    height: 100vh;
     overflow-y: scroll;
 }
 .mainDashboardPage .mainSection .body{
