--- a/src/styles/components/profilepage.module.css
+++ b/src/styles/components/profilepage.module.css
@@ -3,10 +3,15 @@
     background: var(--background);
     min-height: 75vh;
 }
+.profilePage .container{
+    min-height: 80vh;
+}
 .profilePage .container .details{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 1200px;
+    margin: auto;
 }
 .profilePage .details .input{
     width: 50%;
