--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.header .container .logo{
+    cursor: pointer;
+}
 .header .container .navLinks{
     display: flex;
 }
