--- a/src/styles/signin/signup.module.css
+++ b/src/styles/signin/signup.module.css
@@ -1,8 +1,9 @@
 .signup {
-  height: 100vh;
+  height: calc(100vh - 80px);
   margin: 0%;
   padding: 0;
   width: 100%;
+  overflow-y: scroll;
 }
 .signup .container {
   display: flex;
