fixing number format, cashout voucher ans active tab issues

--- a/src/styles/components/maindashboardpage.module.css
+++ b/src/styles/components/maindashboardpage.module.css
@@ -15,6 +15,9 @@
 .mainDashboardPage .mainSection .body{
     min-height: 75vh;
 }
+.mainDashboardPage .mainSection .body .back{
+    cursor: pointer;
+}
 .metrics{
     display: flex;
     flex-wrap: wrap;
