--- a/src/styles/components/createvoucherpage.module.css
+++ b/src/styles/components/createvoucherpage.module.css
@@ -48,6 +48,15 @@
     margin-bottom: 20px;
     margin-top: 8px;
 }
+.createVoucherPage .content .error{
+    background-color: #ff000030;
+    color: #ff0000;
+    padding: 16px 12px;
+    text-align: center;
+    margin-bottom: 16px;
+    border-radius: 8px;
+    margin-right: 20px;
+}
 .createVoucherPage .content .thumbnail img{
     width: 100%;
     height: 100%;
