--- a/src/styles/components/onevoucher.module.css
+++ b/src/styles/components/onevoucher.module.css
@@ -68,3 +68,37 @@
 .table table th{
     padding: 20px 16px;
 }
+@media only screen and (max-width: 768px) {
+     /* #table{
+        width: 100%;
+        max-width: 360px;
+        overflow-x: scroll;
+        margin-bottom: 70px;
+    }
+     table{
+        width: 100%;
+        max-width: 360px;
+        overflow-x: scroll;
+    }
+     .search .input{
+        margin: 0;
+        margin-bottom: 12px;
+    }
+     .filter{
+        height: 40px;
+    } */
+    .content{
+        width: 100%;
+    }
+    .table{
+        width: 100%;
+        margin: 0;
+        margin-top: 20px;
+        margin-bottom: 70px;
+        padding: 0;
+    }
+    .table #table{
+        max-width: 100%;
+        overflow-x: scroll;
+    }
+}
