--- a/src/styles/components/paymentpage.module.css
+++ b/src/styles/components/paymentpage.module.css
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 24px;
+  flex-wrap: wrap;
 }
 .payment .type .one {
   width: 48%;
@@ -39,4 +40,10 @@
 .payment .container .withdraw button {
   width: 100%;
   margin-top: 24px;
+}
+@media only screen and (max-width: 768px){
+  .payment .type .one{
+    width: 100%;
+    margin-bottom: 12px;
+  }
 }
