--- a/src/styles/components/topbar.module.css
+++ b/src/styles/components/topbar.module.css
@@ -15,3 +15,18 @@
     justify-content: center;
     border: 1px solid #7B88AB70;
 }
+@media only screen and (max-width: 768px){
+    .topbar{
+        padding: 20px;
+    }
+    .topbar .balance{
+        padding: 12px 4px;
+        min-width: 170px;
+    }
+    .topbar h3{
+        font-size: 24px;
+    }
+    .topbar h6{
+        font-size: 14px;
+    }
+}
