--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -245,3 +245,9 @@ td{
 .Toastify__toast-theme--light{
   background-color:pink
 }
+
+@media only screen and (max-width: 768px){
+  h3{
+    font-size: 24px;
+  }
+}
