--- a/src/styles/components/cashoutvoucher.module.css
+++ b/src/styles/components/cashoutvoucher.module.css
@@ -33,3 +33,8 @@
     border-radius: 8px;
     /* margin-right: 20px; */
 }
+@media only screen and (max-width: 768px){
+    .cashout .container{
+        padding: 20px;
+    }
+}
