--- a/src/styles/components/topbar.module.css
+++ b/src/styles/components/topbar.module.css
@@ -18,6 +18,7 @@
 @media only screen and (max-width: 768px){
     .topbar{
         padding: 20px;
+        margin-bottom: 0;
     }
     .topbar .balance{
         padding: 12px 4px;
