--- a/src/styles/components/cashoutvoucher.module.css
+++ b/src/styles/components/cashoutvoucher.module.css
@@ -6,10 +6,18 @@
 .cashout .container{
     max-width: 1200px;
     margin: auto;
+    height: calc(100vh - 80px);
+    display: flex;
+    align-items: center;
 }
 .cashout .container .details{
-    max-width: 800px;
+    max-width: 500px;
+    background: var(--background);
+    padding: 30px;
     margin: 20px auto;
+    margin-top: -30px;
+    border-radius: 30px;
+    box-shadow: 0px 10px 50px -20px #25252531;
 }
 .cashout .container .details h3{
     margin-bottom: 20px;
