--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,38 +7,40 @@
   min-height: 100vh;
 }
  */
-.homePage{
+.homePage {
   width: 100%;
   margin: 0;
   padding: 0%;
   height: 100vh;
   overflow: scroll;
-  background: #F6F8FA;
+  background: #f6f8fa;
 }
-.homePage .container{
+.homePage .container {
   width: 100%;
   max-width: 1200px;
   display: flex;
-  height: calc(100vh - 80px);
+  /* height: 80vh; */
   display: flex;
   align-items: center;
   margin: auto;
 }
-.homePage .container .row{
+.homePage .container .row {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  padding: 0%;
+  margin: 0%;
 }
-.homePage .container .row .colOne{
-  max-width: 50%;
+.homePage .container .row .colOne {
+  max-width: 48%;
   z-index: 100;
 }
-.homePage .colOne .buttons{
+.homePage .colOne .buttons {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
-.homePage .colOne .btn{
+.homePage .colOne .btn {
   height: 50px;
   color: var(--primary-color);
   background-color: #fff;
@@ -51,11 +53,11 @@
   border-radius: 30px;
   font-size: 16px;
   font-weight: 400;
-  border: 1px solid #7B88AB99;
+  border: 1px solid #7b88ab99;
   margin-right: 16px;
   cursor: pointer;
 }
-.homePage .colOne .btn .icon{
+.homePage .colOne .btn .icon {
   background-color: var(--primary-color);
   color: #fff;
   width: 42px;
@@ -64,7 +66,7 @@
   padding: 12px;
   margin-left: 8px;
 }
-.homePage .colOne .btnTwo{
+.homePage .colOne .btnTwo {
   height: 50px;
   color: var(--background);
   background-color: var(--primary-color);
@@ -79,7 +81,7 @@
   font-weight: 400;
   cursor: pointer;
 }
-.homePage .colOne .btnTwo .icon{
+.homePage .colOne .btnTwo .icon {
   background-color: var(--background);
   color: var(--primary-color);
   width: 42px;
@@ -88,46 +90,82 @@
   padding: 12px;
   margin-left: 28px;
 }
-.homePage .container h1{
-  text-transform: uppercase;
+.homePage .container h1 {
   color: var(--primary-color);
   line-height: 68px;
 }
-.homePage .container h5{
+.homePage .container h1 span {
+  color: #555;
+}
+.homePage .container h5 {
   margin: 30px 0px;
   font-weight: 400;
-  max-width: 450px;
+  max-width: 600px;
 }
-.homePage .container .row .colTwo{
-  width: 70%;
-  margin-left: -20%;
+.homePage .container .row .colTwo {
+  width: 52%;
   z-index: 10;
+  margin: 0%;
+  padding: 0%;
+  min-height: 650px;
 }
-
+.homePage .container .row .colTwo img {
+  /* height: 100%; */
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+.metrics {
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  background: var(--primary-color);
+  padding: 60px 20px;
+  color: var(--background);
+  z-index: 100;
+  margin-top: -18px;
+}
+.metrics .container {
+  height: auto;
+  max-width: 1200px;
+  margin: auto;
+}
+.metrics .container .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+.metrics .container .row .display {
+  font-size: 80px;
+  font-weight: 600;
+}
 @media only screen and (max-width: 768px) {
-  .homePage .container{
+  .homePage .container {
     margin: 20px;
     width: calc(100% - 40px);
   }
-  .homePage .container h1{
+  .homePage .container h1 {
     font-size: 40px;
     line-height: 48px;
   }
-  .homePage .container h5{
+  .homePage .container h5 {
     font-size: 14px;
   }
-  .homePage .container .row .colOne{
+  .homePage .container .row .colOne {
     max-width: 100%;
   }
-  .homePage .container .row .colTwo{
+  .homePage .container .row .colTwo {
     width: 100%;
     margin: 0;
   }
-  .homePage .container .row .colTwo img{
+  .homePage .container .row .colTwo img {
     width: 100%;
     margin: 24px 0;
   }
-  .homePage .colOne .btnTwo{
+  .homePage .colOne .btnTwo {
     margin-top: 20px;
   }
 }
