--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-  --primary-color: #0f1933;
+  --primary-color: #1F0047;
   --background: #ffffff;
   --background-two: #f7f7f7;
   --background-three: #ECECF0;
@@ -28,14 +28,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #f7f7f7;
+  background-color: #EFF4F9;
   font-family: var(--font-family);
 }
 
 h1 {
   font-family: var(--font-family);
   font-weight: 600;
-  font-size: 60px;
+  font-size: 52px;
 }
 h2 {
   font-family: var(--font-family);
