--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -5,6 +5,8 @@
     margin: 0;
     display: flex;
     align-items: center;
+    background-color: var(--background);
+    border-bottom: 1px solid #7B88AB60;
 }
 .header .container{
     display: flex;
