--- a/src/styles/signin/signup.module.css
+++ b/src/styles/signin/signup.module.css
@@ -1,5 +1,5 @@
 .signup {
-  height: calc(100vh - 80px);
+  height: 100vh;
   margin: 0%;
   padding: 0;
   width: 100%;
@@ -21,15 +21,61 @@
 .select {
   /* width: 48%; */
 }
+.signup .row .colOne {
+  /* width: 100%; */
+  object-fit: cover;
+  height: 100%;
+  width: 57%;
+}
+.signup .row .colOne img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
 
 .signup .row .colTwo {
-  width: 100%;
+  width: 43%;
   display: flex;
   justify-content: center;
   background-color: var(--background-two);
   height: 100vh;
   align-items: center;
   overflow-y: scroll;
+}
+.signup .row .colTwo .tabs{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.signup .row .colTwo .tabs .tab{
+  width: 48%;
+  border: 3px solid #ddd;
+  border-radius: 16px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #999;
+  background-color: var(--background-two);
+  cursor: pointer;
+}
+.signup .row .colTwo .tabs .activeTab{
+  width: 48%;
+  /* border: 3px solid #ddd; */
+  border-radius: 16px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #fff;
+  background-color: var(--primary-color);
+}
+  .signup .row .colTwo .logo {
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 .signup .row .colTwo .content {
   margin: 20px;
@@ -43,6 +89,10 @@
 }
 .signup .row .colTwo h6 {
   margin-bottom: 32px;
+}
+.signup .row .colTwo h2 {
+  margin-bottom: 24px;
+  color: var(--primary-color);  
 }
 .signup .row label {
   margin-top: 20px;
