--- a/src/styles/components/cashoutvoucher.module.css
+++ b/src/styles/components/cashoutvoucher.module.css
@@ -1,48 +1,93 @@
-.cashout{
+.cashout {
+  width: 100%;
+  margin: 0%;
+  padding: 0%;
+}
+.cashout .container {
+  /* max-width: 1200px; */
+  margin: auto;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+.cashout .row .colTwo .logo {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    cursor: pointer;
+  }
+.cashout .container .details {
+  max-width: 500px;
+  background: var(--background);
+  padding: 30px;
+  margin: 20px auto;
+  margin-top: -30px;
+  border-radius: 30px;
+  box-shadow: 0px 10px 50px -20px #25252531;
+}
+.cashout .container .details h3 {
+  margin-bottom: 20px;
+}
+.cashout .container .details .one {
+  margin-bottom: 16px;
+}
+.cashout .container .details input,
+.cashout .container .details select {
+  margin: 8px 0;
+  width: 100%;
+}
+.cashout .container .details button {
+  width: 100%;
+}
+.cashout .container .error {
+  background-color: #ff000030;
+  color: #ff0000;
+  padding: 16px 12px;
+  text-align: center;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  /* margin-right: 20px; */
+}
+
+.cashout .row {
+  display: flex;
+  padding: 0%;
+  align-items: center;
+  margin: 0%;
+  width: 100%;
+}
+.select {
+  /* width: 48%; */
+}
+.cashout .row .colOne {
+  /* width: 100%; */
+  object-fit: cover;
+  height: 100%;
+  width: 57%;
+}
+.cashout .row .colOne img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.cashout .row .colTwo {
+  width: 43%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--background-two);
+  height: 100vh;
+  align-items: center;
+  overflow-y: scroll;
+}
+@media only screen and (max-width: 768px) {
+  .cashout .container {
+    padding: 20px;
+  }
+  .cashout .row .colOne {
+    display: none;
+  }
+  .cashout .row .colTwo {
     width: 100%;
-    margin: 0%;
-    padding: 0%;
-}
-.cashout .container{
-    max-width: 1200px;
-    margin: auto;
-    height: calc(100vh - 80px);
-    display: flex;
-    align-items: center;
-}
-.cashout .container .details{
-    max-width: 500px;
-    background: var(--background);
-    padding: 30px;
-    margin: 20px auto;
-    margin-top: -30px;
-    border-radius: 30px;
-    box-shadow: 0px 10px 50px -20px #25252531;
-}
-.cashout .container .details h3{
-    margin-bottom: 20px;
-}
-.cashout .container .details .one{
-    margin-bottom: 16px;
-}
-.cashout .container .details input, .cashout .container .details select{
-    margin: 8px 0;
-    width: 100%;
-}
-.cashout .container .details button{
-    width: 100%;
-}
-.cashout .container .error{
-    background-color: #ff000030;
-    color: #ff0000;
-    padding: 16px 12px;
-    text-align: center;
-    margin-bottom: 16px;
-    border-radius: 8px;
-    /* margin-right: 20px; */
-}
-@media only screen and (max-width: 768px){
-    .cashout .container{
-        padding: 20px;
-    }
+  }
 }
