--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --primary-color: #1F0047;
+  --primary-color-hover: #410d85;
   --background: #ffffff;
   --background-two: #f7f7f7;
   --background-three: #ECECF0;
@@ -128,6 +129,12 @@ button{
   font-weight: 400;
   cursor: pointer;
   border: 0;
+}
+button:hover{
+  background: var(--primary-color-hover);
+}
+button:active{
+  background: var(--primary-color);
 }
 .btnTwo{
   height: 50px;
