--- a/src/styles/components/createvoucherpage.module.css
+++ b/src/styles/components/createvoucherpage.module.css
@@ -1,115 +1,147 @@
-.createVoucherPage{
-    padding: 20px;
-    background-color: var(--background);    
+.createVoucherPage {
+  /* padding: 20px; */
+  /* background-color: var(--background);     */
 }
-.createVoucherPage  h3{
-    margin: 16px 0;
+.createVoucherPage h2 {
+  margin: 16px 0;
+  color: var(--primary-color);
+
 }
-.createVoucherPage .content{
-    max-width: 700px;
-    margin: auto;
+.createVoucherPage .colOne {
+  width: 40%;
+  padding: 24px;
+  border-radius: 24px;
+  background-color: var(--background);
 }
-.createVoucherPage .content input, .createVoucherPage .content textarea{
-    margin-top: 8px;
-    margin-bottom: 20px;
-}
-.createVoucherPage .content .sortAmount{
+.createVoucherPage .colOne .back{
     display: flex;
-}
-.createVoucherPage .content .sortAmount .input{
-    width: 50%;
-}
-.createVoucherPage .content .amounts{
-    margin-right: 24px;
-}
-.createVoucherPage .content .amounts .one{
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin: 16px 0;
 }
-.createVoucherPage .content .amounts .two{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 16px 0;
+.createVoucherPage .container form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
 }
-.createVoucherPage .content button{
-    width: calc(100% - 24px);
-    margin-top: 12px;
+.createVoucherPage .content {
+  width: 100%;
+  margin: auto;
 }
-.createVoucherPage .content .thumbnail{
-    width: calc(100% - 24px);
-    height: 189px;
+.createVoucherPage .content input,
+.createVoucherPage .content textarea {
+  margin-top: 8px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.createVoucherPage .content .sortAmount {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline !important;
+}
+.createVoucherPage .content .sortAmount .input {
+  width: 48%;
+  align-items: baseline;
+}
+/* .createVoucherPage .content .amounts{
     margin-right: 24px;
-    background-color: #7B88AB60;
-    border-radius: 24px;
-    position: relative;
-    margin-bottom: 20px;
-    margin-top: 8px;
+} */
+.createVoucherPage .content .amounts .one {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 16px 0;
 }
-.createVoucherPage .content .error{
-    background-color: #ff000030;
-    color: #ff0000;
-    padding: 16px 12px;
-    text-align: center;
-    margin-bottom: 16px;
-    border-radius: 8px;
-    margin-right: 20px;
+.createVoucherPage .content .amounts .two {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 16px 0;
 }
-.createVoucherPage .content .thumbnail img{
+.createVoucherPage .content button {
+  width: 100%;
+  margin-top: 12px;
+}
+.createVoucherPage .content .thumbnail {
+  width: 100%;
+  /* height: 189px; */
+  margin-right: 24px;
+  background-color: #7b88ab60;
+  border-radius: 24px;
+  position: relative;
+  margin-bottom: 20px;
+  margin-top: 8px;
+}
+.createVoucherPage .content .error {
+  background-color: #ff000030;
+  color: #ff0000;
+  padding: 16px 12px;
+  text-align: center;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  margin-right: 20px;
+}
+.createVoucherPage .colTwo .thumbnail img {
+  width: 100%;
+  aspect-ratio: 4 / 5;
+  object-fit: cover;
+  border-radius: 24px;
+}
+.createVoucherPage .colTwo .thumbnail .btn {
+  position: absolute;
+  margin-right: 0;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid #7b88ab60;
+  max-width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: var(--background);
+  margin-top: -65%;
+  margin-left: 35%;
+}
+.createVoucherPage .colTwo .thumbnail .btn p {
+  width: auto;
+  font-weight: 500;
+  color: #333;
+}
+.createVoucherPage .colTwo .thumbnail .btn input {
+  display: none;
+}
+.createVoucherPage form .colTwo {
+  max-width: 58%;
+  border-radius: 24px;
+  position: relative;
+}
+@media only screen and (max-width: 768px) {
+  .createVoucherPage input,
+  .createVoucherPage textarea {
     width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-.createVoucherPage .content .thumbnail .btn{
-    position: absolute;
-    margin-right: 0;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px solid #7B88AB60;
-    max-width: 200px;
+  }
+  .createVoucherPage button {
+    width: 100% !important;
+    margin-right: 0%;
+  }
+  .createVoucherPage .content .sortAmount {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: var(--background);
-    margin-top: -65px;
-    margin-left: 460px;
-}
-.createVoucherPage .content .thumbnail .btn p{
-    width: auto;
-    font-weight: 500;
-    color: #333;
-}
-.createVoucherPage .content .thumbnail .btn input{
-    display: none;
-}
-@media only screen and (max-width: 768px){
-    .createVoucherPage input, .createVoucherPage textarea{
-        width: 100%;
-    }
-    .createVoucherPage button{
-        width: 100% !important;
-        margin-right: 0%;
-    }
-    .createVoucherPage .content .sortAmount{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .createVoucherPage .content .sortAmount .input{
-        width: 100%;
-    }
-    .createVoucherPage .content .thumbnail{
-        width: 100%;
-    }
-    .createVoucherPage .content .thumbnail .btn{
-        margin-left: 150px;
-    }
-    .createVoucherPage .content .amounts{
-        margin-right: 0px;
-    }
-    .createVoucherPage .content .error{
-        width: 100%;
-    }
+    flex-wrap: wrap;
+  }
+  .createVoucherPage .content .sortAmount .input {
+    width: 100%;
+  }
+  .createVoucherPage .content .thumbnail {
+    width: 100%;
+  }
+  .createVoucherPage .content .thumbnail .btn {
+    margin-left: 150px;
+  }
+  .createVoucherPage .content .amounts {
+    margin-right: 0px;
+  }
+  .createVoucherPage .content .error {
+    width: 100%;
+  }
 }
