--- a/src/styles/components/onevoucher.module.css
+++ b/src/styles/components/onevoucher.module.css
@@ -12,7 +12,7 @@
 }
 .content .detail img{
     width: 100%;
-    height: 110px;
+    aspect-ratio: 4 / 2;
     object-fit: cover;
     border-radius: 16px;
     margin-top: 8px;
