--- a/src/styles/components/cashoutvoucher.module.css
+++ b/src/styles/components/cashoutvoucher.module.css
@@ -27,6 +27,7 @@
 }
 .cashout .container .details h3 {
   margin-bottom: 20px;
+  color: var(--primary-color);
 }
 .cashout .container .details .one {
   margin-bottom: 16px;
