--- a/src/styles/components/paymentpage.module.css
+++ b/src/styles/components/paymentpage.module.css
@@ -41,6 +41,15 @@
   width: 100%;
   margin-top: 24px;
 }
+.error {
+  background-color: #ff000030;
+  color: #ff0000;
+  padding: 16px 12px;
+  text-align: center;
+  margin-bottom: 16px;
+  border-radius: 8px;
+  margin-right: 20px;
+}
 @media only screen and (max-width: 768px){
   .payment .type .one{
     width: 100%;
