--- a/src/styles/components/voucherpage.module.css
+++ b/src/styles/components/voucherpage.module.css
@@ -59,14 +59,23 @@
     align-items: center;
     display: flex;
     border-radius: 8px;
-
-}
+    cursor: pointer;
+}   
 .voucher table img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
     border-radius: 3px solid #55555599;
 }
+.error {
+    background-color: #ff000030;
+    color: #ff0000;
+    padding: 16px 12px;
+    text-align: center;
+    margin-bottom: 16px;
+    border-radius: 8px;
+    margin-right: 20px;
+  }
 @media only screen and (max-width: 768px) {
     .voucher #table{
         width: 100%;
