--- a/src/styles/components/onevoucher.module.css
+++ b/src/styles/components/onevoucher.module.css
@@ -32,6 +32,7 @@
     border-bottom: 3px solid #fff;
     color: #93959D;
     font-weight: 500;
+    cursor: pointer;
 }
 .table .tabs .activeTab{
     padding: 6px 20px;
