--- a/src/styles/components/createvoucherpage.module.css
+++ b/src/styles/components/createvoucherpage.module.css
@@ -2,21 +2,33 @@
   /* padding: 20px; */
   /* background-color: var(--background);     */
 }
+
 .createVoucherPage h2 {
   margin: 16px 0;
   color: var(--primary-color);
 
 }
+
 .createVoucherPage .colOne {
   width: 40%;
   padding: 24px;
   border-radius: 24px;
   background-color: var(--background);
 }
-.createVoucherPage .colOne .back{
-    display: flex;
-    align-items: center;
+
+@media only screen and (max-width: 1200px) {
+  .createVoucherPage .colOne {
+    width: 100%;
+    margin-top: 16px;
+  }
 }
+
+.createVoucherPage .colOne .back {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .createVoucherPage .container form {
   display: flex;
   justify-content: space-between;
@@ -25,25 +37,36 @@
   max-width: 1100px;
   margin: auto;
 }
+
+@media only screen and (max-width: 1200px) {
+  .createVoucherPage .container form {
+    flex-direction: column-reverse;
+  }
+}
+
 .createVoucherPage .content {
   width: 100%;
   margin: auto;
 }
+
 .createVoucherPage .content input,
 .createVoucherPage .content textarea {
   margin-top: 8px;
   margin-bottom: 20px;
   width: 100%;
 }
+
 .createVoucherPage .content .sortAmount {
   display: flex;
   justify-content: space-between;
   align-items: baseline !important;
 }
+
 .createVoucherPage .content .sortAmount .input {
   width: 48%;
   align-items: baseline;
 }
+
 /* .createVoucherPage .content .amounts{
     margin-right: 24px;
 } */
@@ -53,16 +76,19 @@
   align-items: center;
   margin: 16px 0;
 }
+
 .createVoucherPage .content .amounts .two {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 16px 0;
 }
+
 .createVoucherPage .content button {
   width: 100%;
   margin-top: 12px;
 }
+
 .createVoucherPage .content .thumbnail {
   width: 100%;
   /* height: 189px; */
@@ -73,6 +99,7 @@
   margin-bottom: 20px;
   margin-top: 8px;
 }
+
 .createVoucherPage .content .error {
   background-color: #ff000030;
   color: #ff0000;
@@ -82,65 +109,101 @@
   border-radius: 8px;
   margin-right: 20px;
 }
+
 .createVoucherPage .colTwo .thumbnail img {
   width: 100%;
   aspect-ratio: 4 / 5;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 24px;
 }
+
+@media only screen and (max-width: 1200px) {
+  .createVoucherPage .colTwo .thumbnail img {
+    width: 100%;
+    aspect-ratio: 6 / 4;
+  }
+}
+
 .createVoucherPage .colTwo .thumbnail .btn {
   position: absolute;
   margin-right: 0;
   height: 48px;
   border-radius: 8px;
-  border: 1px solid #7b88ab60;
+  border: 3px solid #7b88ab60;
   max-width: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   background-color: var(--background);
-  margin-top: -65%;
+  margin-top: -50%;
   margin-left: 35%;
+  cursor: pointer;
 }
+
+@media only screen and (max-width: 768px) {
+  .createVoucherPage .colTwo .thumbnail .btn {
+    margin-top: -20%;
+    margin-left: 22%;
+  }
+}
+
 .createVoucherPage .colTwo .thumbnail .btn p {
   width: auto;
   font-weight: 500;
   color: #333;
 }
+
 .createVoucherPage .colTwo .thumbnail .btn input {
   display: none;
 }
+
 .createVoucherPage form .colTwo {
   max-width: 58%;
   border-radius: 24px;
   position: relative;
 }
+
+@media only screen and (max-width: 1200px) {
+  .createVoucherPage form .colTwo {
+    max-width: 100%;
+    margin: 24px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
+
   .createVoucherPage input,
   .createVoucherPage textarea {
     width: 100%;
   }
+
   .createVoucherPage button {
     width: 100% !important;
     margin-right: 0%;
   }
+
   .createVoucherPage .content .sortAmount {
     display: flex;
     flex-wrap: wrap;
   }
+
   .createVoucherPage .content .sortAmount .input {
     width: 100%;
   }
+
   .createVoucherPage .content .thumbnail {
     width: 100%;
   }
+
   .createVoucherPage .content .thumbnail .btn {
     margin-left: 150px;
   }
+
   .createVoucherPage .content .amounts {
     margin-right: 0px;
   }
+
   .createVoucherPage .content .error {
     width: 100%;
   }
