--- a/src/styles/components/faqs.module.css
+++ b/src/styles/components/faqs.module.css
@@ -12,6 +12,13 @@
     margin: auto;
     padding: 40px;
 }
+
+@media only screen and (max-height: 768px) {
+    .faqs .container{
+        padding: 0px;
+    }
+}
+
 .faqs .container .content{
     max-width: 800px;
     background-color: var(--background);
@@ -28,9 +35,23 @@
 .faqs .content .flex{
     display: flex;
 }
+
+@media only screen and (max-height: 768px) {
+    .faqs .content .flex{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
 .faqs .content .flex .questions{
     width: 45%;
 }
+
+@media only screen and (max-height: 768px) {
+    .faqs .content .flex .questions{
+        width: 100%;
+    }
+}
+
 .faqs .content .flex .questions .one{
     height: 80px;
     border-radius: 40px;
@@ -67,4 +88,10 @@
     border-radius: 30px;
     border: 1px solid #ddd;
     margin: 10px;
+}
+
+@media only screen and (max-height: 768px) {
+    .faqs .content .flex .answers{
+        width: 100%
+    }
 }
