--- a/src/styles/components/maindashboardpage.module.css
+++ b/src/styles/components/maindashboardpage.module.css
@@ -26,14 +26,23 @@
 }
 .metrics .card {
   min-width: 180px;
-  max-width: 250px;
+  max-width: 500px;
   height: 170px;
   background-color: var(--background);
   padding: 24px 20px;
   box-shadow: 0px 0px 25px var(--shadow);
   border-radius: 20px;
   color: var(--primary-color);
+  margin-top: 16px;
+  
 }
+
+@media only screen and (max-width: 768px) {
+  .metrics .card {
+    width: 100%;
+    margin-top: 0px;
+  }
+  }
 .metrics .card h6 {
   font-size: 15px;
   margin: 8px 0;
