--- a/src/styles/signin/signup.module.css
+++ b/src/styles/signin/signup.module.css
@@ -77,6 +77,7 @@
   top: 30px;
   left: 30px;
   cursor: pointer;
+  z-index: 1;
 }
 .signup .row .colTwo .content {
   margin: 20px;
@@ -87,6 +88,8 @@
   padding: 30px;
   border-radius: 30px;
   box-shadow: 0px 10px 50px -20px #25252531;
+  z-index: 2;
+  margin-top: 28px;
 }
 .signup .row .colTwo h6 {
   margin-bottom: 32px;
