--- a/src/styles/components/createvoucherpage.module.css
+++ b/src/styles/components/createvoucherpage.module.css
@@ -6,7 +6,14 @@
 .createVoucherPage h2 {
   margin: 16px 0;
   color: var(--primary-color);
-
+}
+.createVoucherPage small{
+  background-color: #DDDDDD;
+  color: #93959D;
+  font-weight: 400;
+  font-size: 8px;
+  padding: .2rem 1rem;
+  border-radius: 5px;
 }
 
 .createVoucherPage .colOne {
@@ -14,6 +21,7 @@
   padding: 24px;
   border-radius: 24px;
   background-color: var(--background);
+  height: fit-content;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -26,7 +34,15 @@
 .createVoucherPage .colOne .back {
   display: flex;
   align-items: center;
+  gap: 7px;
   cursor: pointer;
+}
+
+.createVoucherPage .colOne .paymentTitle h3{
+ font-size: 24px;
+ font-weight: 500;
+ text-align: center;
+ margin: 1rem auto;
 }
 
 .createVoucherPage .container form {
@@ -36,6 +52,11 @@
   width: 100%;
   max-width: 1100px;
   margin: auto;
+}
+
+.createVoucherPage .container form label{
+  font-weight: 400;
+  color: #333333;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -49,10 +70,31 @@
   margin: auto;
 }
 
+.createVoucherPage .content .amountBandwidth {
+  font-size: 12px;
+  font-weight: 400;
+  color: #7B88AB;
+  margin-top: -13px;
+}
+.createVoucherPage .content .expiryLabel {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+.createVoucherPage .content .expiryLabel {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.createVoucherPage .content .expiryInput {
+  width: 150px;
+}
+
 .createVoucherPage .content input,
 .createVoucherPage .content textarea {
   margin-top: 8px;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   width: 100%;
 }
 
@@ -84,9 +126,20 @@
   margin: 16px 0;
 }
 
+.createVoucherPage .content select {
+  width: 100%;
+  padding:0 .5rem;
+  margin: 8px 0 16px;
+}
+
+
 .createVoucherPage .content button {
   width: 100%;
   margin-top: 12px;
+}
+.createVoucherPage .content .paymentButton {
+  border-radius: 8px;
+  margin-top: 5rem;
 }
 
 .createVoucherPage .content .thumbnail {
@@ -141,6 +194,34 @@
   cursor: pointer;
 }
 
+.createVoucherPage .paymentColTwo .thumbnail {
+  width: 100%;
+  height: auto;
+  padding:1rem;
+}
+
+.createVoucherPage .paymentColTwo .thumbnail img {
+  width: 100%;
+  height: auto;
+}
+
+.createVoucherPage .paymentColTwo .thumbnail .btn {
+  width:100%;
+}
+
+.createVoucherPage .paymentColTwo .thumbnail .btn .chooseImg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: fit-content;
+  cursor: pointer;
+  border: 1px solid #7b88ab60;
+  padding: .5rem 1rem;
+  border-radius: 5px;
+  margin: .5rem auto;
+}
+
 @media only screen and (max-width: 768px) {
   .createVoucherPage .colTwo .thumbnail .btn {
     margin-top: -20%;
@@ -148,13 +229,13 @@
   }
 }
 
-.createVoucherPage .colTwo .thumbnail .btn p {
+.createVoucherPage .colTwo .thumbnail .btn p, .createVoucherPage .paymentColTwo .thumbnail .btn p {
   width: auto;
   font-weight: 500;
   color: #333;
 }
 
-.createVoucherPage .colTwo .thumbnail .btn input {
+.createVoucherPage .colTwo .thumbnail .btn input,  .createVoucherPage .paymentColTwo .thumbnail .btn input{
   display: none;
 }
 
@@ -164,10 +245,25 @@
   position: relative;
 }
 
+.createVoucherPage form .paymentColTwo {
+  background-color: #ffffff;
+  width:100%;
+  max-width: 58%;
+  min-height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+}
+
+
 @media only screen and (max-width: 1200px) {
   .createVoucherPage form .colTwo {
     max-width: 100%;
     margin: 24px;
+  }
+  .createVoucherPage form .paymentColTwo {
+    max-width: 100%;
   }
 }
 
