--- a/src/styles/components/voucherpage.module.css
+++ b/src/styles/components/voucherpage.module.css
@@ -10,6 +10,24 @@
     align-items: center;
     margin-bottom: 16px;
 }
+.voucher .title .action {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 10px;
+    margin: 1rem 0;
+}
+.voucher .title .action button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    padding: 0 20px;
+}
+.voucher .title .action .linkButton {
+    gap: 2px !important;
+    padding: 0 20px 0 5px;
+}
 .voucher .tabs{
     display: flex;
     margin-bottom: 12px;
@@ -30,7 +48,8 @@
 
 .voucher .search {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    gap: 10px;
 }
 .voucher .search .input{
     display: flex;
@@ -43,8 +62,8 @@
   font-size: 14px;
   border: 1px solid var(--stroke);
   font-family: var(--font-family);
-  margin-right: 16px;
 }
+
 .voucher .search .input input{
     border: #ffffff00;
     height: 38px;
@@ -61,6 +80,11 @@
     border-radius: 8px;
     cursor: pointer;
 }   
+
+.voucher #table {
+    overflow-x: scroll;
+    width: 100%;
+}
 .voucher table img{
     width: 50px;
     height: 50px;
@@ -93,5 +117,12 @@
     }
     .voucher .filter{
         height: 40px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .voucher .title{
+        flex-direction: column;
+        align-items: start;
     }
 }
