--- a/src/styles/components/createvoucherpage.module.css
+++ b/src/styles/components/createvoucherpage.module.css
@@ -24,6 +24,12 @@
   height: fit-content;
 }
 
+.createVoucherPage table button {
+  background: transparent;
+  color: #ff0000;
+  text-align: left;
+} 
+
 @media only screen and (max-width: 1200px) {
   .createVoucherPage .colOne {
     width: 100%;
