--- a/src/styles/components/sidebar.module.css
+++ b/src/styles/components/sidebar.module.css
@@ -1,91 +1,92 @@
-.desktopSidebar{
-    margin: 0%;
-    padding: 0%;
-    width: 300px;
-    height: 100vh;
-    background-color: #fff;
-    box-shadow: 0px 0px 25px var(--shadow) ;
+.desktopSidebar {
+	margin: 0%;
+	padding: 0%;
+	width: 300px;
+	height: 100vh;
+	background-color: #fff;
+	box-shadow: 0px 0px 25px var(--shadow);
 }
 .desktopSidebar .container {
-    padding: 50px 25px;
+	padding: 50px 25px;
 }
-.desktopSidebar .container .logo{
-    margin: 0 0 40px 0;
-    cursor: pointer;
+.desktopSidebar .container .logo {
+	margin: 0 0 40px 0;
+	cursor: pointer;
 }
-.desktopSidebar .container h6{
-    text-transform: uppercase;
-    color: #93959D;
-    margin: 20px 0;
+.desktopSidebar .container h6 {
+	text-transform: uppercase;
+	color: #93959d;
+	margin: 20px 0;
 }
-.desktopSidebar .container .sideLinks{
-    width: 100%;
+.desktopSidebar .container .sideLinks {
+	width: 100%;
 }
-.desktopSidebar .container .link{
-    display: flex;
-    width: 100%;
-    height: 48px;
-    align-items: center ;
-    padding-left: 20px;
-    color: #93959D;
-    cursor: pointer;
+.desktopSidebar .container .link {
+	display: flex;
+	width: 100%;
+	height: 48px;
+	align-items: center;
+	padding-left: 20px;
+	color: #93959d;
+	cursor: pointer;
 }
-.desktopSidebar .container .link .icon{
-    margin-right: 6px;
+
+.desktopSidebar .container .link .icon {
+	margin-right: 6px;
 }
-.desktopSidebar .container .activeLink{
-    display: flex;
-    width: 100%;
-    height: 48px;
-    align-items: center ;
-    padding-left: 20px;
-    background-color: var(--primary-color);
-    color: #fff;
-    cursor: pointer;
-    border-radius: 8px;
+.desktopSidebar .container .activeLink {
+	display: flex;
+	width: 100%;
+	height: 48px;
+	align-items: center;
+	padding-left: 20px;
+	background-color: var(--primary-color);
+	color: #fff;
+	cursor: pointer;
+	border-radius: 8px;
 }
-.desktopSidebar .container .activeLink .icon{
-    margin-right: 6px;
+.desktopSidebar .container .activeLink .icon {
+	margin-right: 6px;
 }
-.bottom{
-    position: absolute;
-    bottom: 0;
-    padding: 20px 0;
+.bottom {
+	position: absolute;
+	bottom: 0;
+	padding: 20px 0;
 }
-.bottom .profile{
-    display: flex;
-    align-items: center;
-    padding: 12px 5px;
-    border-radius: 12px;
-    background: #f7f7f7;
-    margin-bottom: 16px;
+.bottom .profile {
+	display: flex;
+	align-items: center;
+	padding: 12px 5px;
+	border-radius: 12px;
+	background: #f7f7f7;
+	margin-bottom: 16px;
 }
-.bottom .profile img{
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    background: #7B88AB60;
-    border-radius: 50%;
-    margin-right: 8px;
+.bottom .profile img {
+	width: 50px;
+	height: 50px;
+	object-fit: cover;
+	background: #7b88ab60;
+	border-radius: 50%;
+	margin-right: 8px;
 }
-.bottom .profile h6{
-    text-transform: capitalize;
-    color: #333;
-    font-weight: 500;
-    margin: 0;
-    padding: 0%;
-    width: 180px;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    white-space:nowrap;
+.bottom .profile h6 {
+	text-transform: capitalize;
+	color: #333;
+	font-weight: 500;
+	margin: 0;
+	padding: 0%;
+	width: 180px;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
-.bottom .exit{
-    color: #ff0000;
-    display: flex;
-    padding: 16px 8px;
-    cursor: pointer;
+.bottom .exit {
+	color: #ff0000;
+	display: flex;
+	padding: 16px 8px;
+	cursor: pointer;
 }
-.bottom .exit .icon{
-    color: #ff0000;
-    margin-right: 12px;
+.bottom .exit .icon {
+	color: #ff0000;
+	margin-right: 12px;
 }
