--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,7 @@ body {
 	overflow-x: hidden;
 	background-color: #eff4f9;
 	font-family: var(--font-family);
+	font-size: 14px;
 }
 
 h1 {
@@ -139,14 +140,15 @@ button[disabled]:hover {
 }
 
 button {
-	height: 50px;
+	/* height: 50px; */
 	color: #fff;
 	background-color: var(--primary-color);
 	padding: 0 30px;
 	min-width: 150px;
 	font-family: var(--font-family);
 	border-radius: 50px;
-	font-size: 16px;
+	padding: 7px 0;
+	font-size: 14px;
 	font-weight: 400;
 	cursor: pointer;
 	border: 0;
@@ -187,7 +189,7 @@ button:active {
 li {
 	font-family: var(--font-family);
 	list-style: none;
-	font-size: 16px;
+	font-size: 14px;
 }
 
 p {
